Complete the refactoring of the mark exercise command